--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -17,7 +17,7 @@
         <div class="card-body">
             <div th:switch="${list}" class="container my-5">
                 <p class="my-5">
-                    <a href="/api/v1/users/add" class="btn btn-primary"><i
+                    <a href="/add" class="btn btn-primary"><i
                             class="fas fa-user-plus ml-2"> Add User</i></a>
                 </p>
                 <div class="col-md-10">
